--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ UMCloudDj/media/eXeTestElp
 UMCloudDj/media/eXeTestExport
 UMCloudDj/settings.py
 UMCloudDj/wordpresscred.txt
+UMCloudDj/media/cfregdump
 *.pyc
 *.bak
 adllrs/
